# 601-os

./: CMakeLists.txt  build.sh  notes.txt  os161.sublime-workspace  root
os161/: CHANGES
os161/kern/arch/mips/include/: current.h  trapframe.h
os161/kern/arch/mips/locore/: exception-mips1.S  trap.c
os161/kern/arch/mips/syscall/: syscall.c
os161/kern/arch/mips/thread/: cpu.c  switch.S
os161/kern/arch/mips/vm/: dumbvm.c
os161/kern/arch/sys161/dev/: lamebus_machdep.c
os161/kern/arch/sys161/main/: start.S
os161/kern/dev/generic/: console.c
os161/kern/fs/semfs/: semfs_obj.c
os161/kern/gdbscripts/: mips-userland  wchan
os161/kern/include/: cpu.h  current.h  lib.h  synch.h  test_data.c  thread.h
os161/kern/lib/: kprintf.c  misc.c
os161/kern/main/: main.c
os161/kern/proc/: proc.c
os161/kern/synchprobs/: stoplight.c  whalemating.c
os161/kern/test/: rwtest.c  semunit.c  synchprobs.c  synchtest.c  tt3.c
os161/kern/thread/: spl.c  synch.c  thread.c
os161/kern/vfs/: vfslist.c
os161/kern/vm/: copyinout.c  kmalloc.c
os161/mk/: os161.config-mips.mk
os161/test161/tests/stability/: faulter.t
