cmake_minimum_required(VERSION 3.8)
project(601_os)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        os161/common/gcc-millicode/adddi3.c
        os161/common/gcc-millicode/anddi3.c
        os161/common/gcc-millicode/ashldi3.c
        os161/common/gcc-millicode/ashrdi3.c
        os161/common/gcc-millicode/cmpdi2.c
        os161/common/gcc-millicode/divdi3.c
        os161/common/gcc-millicode/iordi3.c
        os161/common/gcc-millicode/longlong.h
        os161/common/gcc-millicode/lshldi3.c
        os161/common/gcc-millicode/lshrdi3.c
        os161/common/gcc-millicode/moddi3.c
        os161/common/gcc-millicode/muldi3.c
        os161/common/gcc-millicode/negdi2.c
        os161/common/gcc-millicode/notdi2.c
        os161/common/gcc-millicode/qdivrem.c
        os161/common/gcc-millicode/subdi3.c
        os161/common/gcc-millicode/ucmpdi2.c
        os161/common/gcc-millicode/udivdi3.c
        os161/common/gcc-millicode/umoddi3.c
        os161/common/gcc-millicode/xordi3.c
        os161/common/libc/printf/__printf.c
        os161/common/libc/printf/snprintf.c
        os161/common/libc/printf/tprintf.c
        os161/common/libc/stdlib/atoi.c
        os161/common/libc/string/bzero.c
        os161/common/libc/string/memcpy.c
        os161/common/libc/string/memmove.c
        os161/common/libc/string/memset.c
        os161/common/libc/string/strcat.c
        os161/common/libc/string/strchr.c
        os161/common/libc/string/strcmp.c
        os161/common/libc/string/strcpy.c
        os161/common/libc/string/strlen.c
        os161/common/libc/string/strrchr.c
        os161/common/libc/string/strtok_r.c
        os161/common/libtest161/config.h
        os161/common/libtest161/secure.c
        os161/common/libtest161/sha256.c
        os161/common/libtest161/sha256.h
        os161/common/libtest161/test161.c
        os161/kern/arch/mips/include/kern/endian.h
        os161/kern/arch/mips/include/kern/regdefs.h
        os161/kern/arch/mips/include/kern/setjmp.h
        os161/kern/arch/mips/include/kern/signal.h
        os161/kern/arch/mips/include/kern/types.h
        os161/kern/arch/mips/include/current.h
        os161/kern/arch/mips/include/elf.h
        os161/kern/arch/mips/include/membar.h
        os161/kern/arch/mips/include/specialreg.h
        os161/kern/arch/mips/include/spinlock.h
        os161/kern/arch/mips/include/thread.h
        os161/kern/arch/mips/include/tlb.h
        os161/kern/arch/mips/include/trapframe.h
        os161/kern/arch/mips/include/types.h
        os161/kern/arch/mips/include/vm.h
        os161/kern/arch/mips/locore/trap.c
        os161/kern/arch/mips/syscall/syscall.c
        os161/kern/arch/mips/thread/cpu.c
        os161/kern/arch/mips/thread/switchframe.c
        os161/kern/arch/mips/thread/switchframe.h
        os161/kern/arch/mips/thread/thread_machdep.c
        os161/kern/arch/mips/vm/dumbvm.c
        os161/kern/arch/mips/vm/ram.c
        os161/kern/arch/sys161/dev/lamebus_machdep.c
        os161/kern/arch/sys161/include/bus.h
        os161/kern/arch/sys161/include/maxcpus.h
        os161/kern/compile/DUMBVM/includelinks/machine/kern/endian.h
        os161/kern/compile/DUMBVM/includelinks/machine/kern/regdefs.h
        os161/kern/compile/DUMBVM/includelinks/machine/kern/setjmp.h
        os161/kern/compile/DUMBVM/includelinks/machine/kern/signal.h
        os161/kern/compile/DUMBVM/includelinks/machine/kern/types.h
        os161/kern/compile/DUMBVM/includelinks/mips/kern/endian.h
        os161/kern/compile/DUMBVM/includelinks/mips/kern/regdefs.h
        os161/kern/compile/DUMBVM/includelinks/mips/kern/setjmp.h
        os161/kern/compile/DUMBVM/includelinks/mips/kern/signal.h
        os161/kern/compile/DUMBVM/includelinks/mips/kern/types.h
        os161/kern/compile/DUMBVM/autoconf.c
        os161/kern/compile/DUMBVM/autoconf.h
        os161/kern/compile/DUMBVM/opt-automationtest.h
        os161/kern/compile/DUMBVM/opt-dumbvm.h
        os161/kern/compile/DUMBVM/opt-hangman.h
        os161/kern/compile/DUMBVM/opt-net.h
        os161/kern/compile/DUMBVM/opt-netfs.h
        os161/kern/compile/DUMBVM/opt-noasserts.h
        os161/kern/compile/DUMBVM/opt-semfs.h
        os161/kern/compile/DUMBVM/opt-sfs.h
        os161/kern/compile/DUMBVM/opt-synchprobs.h
        os161/kern/compile/DUMBVM/vers.c
        os161/kern/dev/generic/beep.c
        os161/kern/dev/generic/beep.h
        os161/kern/dev/generic/console.c
        os161/kern/dev/generic/console.h
        os161/kern/dev/generic/random.c
        os161/kern/dev/generic/random.h
        os161/kern/dev/generic/rtclock.c
        os161/kern/dev/generic/rtclock.h
        os161/kern/dev/lamebus/beep_ltimer.c
        os161/kern/dev/lamebus/con_lscreen.c
        os161/kern/dev/lamebus/con_lser.c
        os161/kern/dev/lamebus/emu.c
        os161/kern/dev/lamebus/emu.h
        os161/kern/dev/lamebus/emu_att.c
        os161/kern/dev/lamebus/lamebus.c
        os161/kern/dev/lamebus/lamebus.h
        os161/kern/dev/lamebus/lhd.c
        os161/kern/dev/lamebus/lhd.h
        os161/kern/dev/lamebus/lhd_att.c
        os161/kern/dev/lamebus/lnet.c
        os161/kern/dev/lamebus/lnet_att.c
        os161/kern/dev/lamebus/lrandom.c
        os161/kern/dev/lamebus/lrandom.h
        os161/kern/dev/lamebus/lrandom_att.c
        os161/kern/dev/lamebus/lscreen.c
        os161/kern/dev/lamebus/lscreen.h
        os161/kern/dev/lamebus/lscreen_att.c
        os161/kern/dev/lamebus/lser.c
        os161/kern/dev/lamebus/lser.h
        os161/kern/dev/lamebus/lser_att.c
        os161/kern/dev/lamebus/ltimer.c
        os161/kern/dev/lamebus/ltimer.h
        os161/kern/dev/lamebus/ltimer_att.c
        os161/kern/dev/lamebus/ltrace.c
        os161/kern/dev/lamebus/ltrace.h
        os161/kern/dev/lamebus/ltrace_att.c
        os161/kern/dev/lamebus/random_lrandom.c
        os161/kern/dev/lamebus/rtclock_ltimer.c
        os161/kern/fs/semfs/semfs.h
        os161/kern/fs/semfs/semfs_fsops.c
        os161/kern/fs/semfs/semfs_obj.c
        os161/kern/fs/semfs/semfs_vnops.c
        os161/kern/fs/sfs/sfs_balloc.c
        os161/kern/fs/sfs/sfs_bmap.c
        os161/kern/fs/sfs/sfs_dir.c
        os161/kern/fs/sfs/sfs_fsops.c
        os161/kern/fs/sfs/sfs_inode.c
        os161/kern/fs/sfs/sfs_io.c
        os161/kern/fs/sfs/sfs_vnops.c
        os161/kern/fs/sfs/sfsprivate.h
        os161/kern/include/kern/endian.h
        os161/kern/include/kern/errmsg.h
        os161/kern/include/kern/errno.h
        os161/kern/include/kern/fcntl.h
        os161/kern/include/kern/ioctl.h
        os161/kern/include/kern/iovec.h
        os161/kern/include/kern/limits.h
        os161/kern/include/kern/reboot.h
        os161/kern/include/kern/resource.h
        os161/kern/include/kern/secret.h
        os161/kern/include/kern/secure.h
        os161/kern/include/kern/seek.h
        os161/kern/include/kern/sfs.h
        os161/kern/include/kern/signal.h
        os161/kern/include/kern/socket.h
        os161/kern/include/kern/stat.h
        os161/kern/include/kern/stattypes.h
        os161/kern/include/kern/syscall.h
        os161/kern/include/kern/test161.h
        os161/kern/include/kern/time.h
        os161/kern/include/kern/types.h
        os161/kern/include/kern/unistd.h
        os161/kern/include/kern/wait.h
        os161/kern/include/addrspace.h
        os161/kern/include/array.h
        os161/kern/include/bitmap.h
        os161/kern/include/cdefs.h
        os161/kern/include/clock.h
        os161/kern/include/copyinout.h
        os161/kern/include/cpu.h
        os161/kern/include/current.h
        os161/kern/include/device.h
        os161/kern/include/elf.h
        os161/kern/include/emufs.h
        os161/kern/include/endian.h
        os161/kern/include/fs.h
        os161/kern/include/hangman.h
        os161/kern/include/lib.h
        os161/kern/include/limits.h
        os161/kern/include/mainbus.h
        os161/kern/include/membar.h
        os161/kern/include/proc.h
        os161/kern/include/prompt.h
        os161/kern/include/setjmp.h
        os161/kern/include/sfs.h
        os161/kern/include/signal.h
        os161/kern/include/spinlock.h
        os161/kern/include/spl.h
        os161/kern/include/stat.h
        os161/kern/include/stdarg.h
        os161/kern/include/synch.h
        os161/kern/include/syscall.h
        os161/kern/include/test.h
        os161/kern/include/thread.h
        os161/kern/include/threadlist.h
        os161/kern/include/threadprivate.h
        os161/kern/include/types.h
        os161/kern/include/uio.h
        os161/kern/include/version.h
        os161/kern/include/vfs.h
        os161/kern/include/vm.h
        os161/kern/include/vnode.h
        os161/kern/include/wchan.h
        os161/kern/lib/array.c
        os161/kern/lib/bitmap.c
        os161/kern/lib/bswap.c
        os161/kern/lib/kgets.c
        os161/kern/lib/kprintf.c
        os161/kern/lib/misc.c
        os161/kern/lib/time.c
        os161/kern/lib/uio.c
        os161/kern/main/main.c
        os161/kern/main/menu.c
        os161/kern/proc/proc.c
        os161/kern/synchprobs/stoplight.c
        os161/kern/synchprobs/whalemating.c
        os161/kern/syscall/loadelf.c
        os161/kern/syscall/runprogram.c
        os161/kern/syscall/time_syscalls.c
        os161/kern/test/arraytest.c
        os161/kern/test/automationtest.c
        os161/kern/test/bitmaptest.c
        os161/kern/test/fstest.c
        os161/kern/test/hmacunit.c
        os161/kern/test/kmalloctest.c
        os161/kern/test/lib.c
        os161/kern/test/nettest.c
        os161/kern/test/rwtest.c
        os161/kern/test/semunit.c
        os161/kern/test/synchprobs.c
        os161/kern/test/synchtest.c
        os161/kern/test/threadlisttest.c
        os161/kern/test/threadtest.c
        os161/kern/test/tt3.c
        os161/kern/thread/clock.c
        os161/kern/thread/hangman.c
        os161/kern/thread/spinlock.c
        os161/kern/thread/spl.c
        os161/kern/thread/synch.c
        os161/kern/thread/thread.c
        os161/kern/thread/threadlist.c
        os161/kern/vfs/device.c
        os161/kern/vfs/devnull.c
        os161/kern/vfs/vfscwd.c
        os161/kern/vfs/vfsfail.c
        os161/kern/vfs/vfslist.c
        os161/kern/vfs/vfslookup.c
        os161/kern/vfs/vfspath.c
        os161/kern/vfs/vnode.c
        os161/kern/vm/addrspace.c
        os161/kern/vm/copyinout.c
        os161/kern/vm/kmalloc.c
        os161/userland/bin/cat/cat.c
        os161/userland/bin/cp/cp.c
        os161/userland/bin/false/false.c
        os161/userland/bin/ln/ln.c
        os161/userland/bin/ls/ls.c
        os161/userland/bin/mkdir/mkdir.c
        os161/userland/bin/mv/mv.c
        os161/userland/bin/pwd/pwd.c
        os161/userland/bin/rm/rm.c
        os161/userland/bin/rmdir/rmdir.c
        os161/userland/bin/sh/sh.c
        os161/userland/bin/sync/sync.c
        os161/userland/bin/tac/tac.c
        os161/userland/bin/true/true.c
        os161/userland/include/sys/cdefs.h
        os161/userland/include/sys/endian.h
        os161/userland/include/sys/ioctl.h
        os161/userland/include/sys/null.h
        os161/userland/include/sys/reboot.h
        os161/userland/include/sys/stat.h
        os161/userland/include/sys/types.h
        os161/userland/include/sys/wait.h
        os161/userland/include/test/quint.h
        os161/userland/include/test/test.h
        os161/userland/include/test/triple.h
        os161/userland/include/test161/secure.h
        os161/userland/include/test161/test161.h
        os161/userland/include/types/size_t.h
        os161/userland/include/assert.h
        os161/userland/include/err.h
        os161/userland/include/errno.h
        os161/userland/include/fcntl.h
        os161/userland/include/limits.h
        os161/userland/include/setjmp.h
        os161/userland/include/signal.h
        os161/userland/include/stdarg.h
        os161/userland/include/stdbool.h
        os161/userland/include/stdint.h
        os161/userland/include/stdio.h
        os161/userland/include/stdlib.h
        os161/userland/include/string.h
        os161/userland/include/time.h
        os161/userland/include/unistd.h
        os161/userland/lib/hostcompat/err.c
        os161/userland/lib/hostcompat/host-err.h
        os161/userland/lib/hostcompat/hostcompat.c
        os161/userland/lib/hostcompat/hostcompat.h
        os161/userland/lib/hostcompat/ntohll.c
        os161/userland/lib/hostcompat/time.c
        os161/userland/lib/libc/stdio/__puts.c
        os161/userland/lib/libc/stdio/getchar.c
        os161/userland/lib/libc/stdio/printf.c
        os161/userland/lib/libc/stdio/putchar.c
        os161/userland/lib/libc/stdio/puts.c
        os161/userland/lib/libc/stdlib/abort.c
        os161/userland/lib/libc/stdlib/exit.c
        os161/userland/lib/libc/stdlib/getenv.c
        os161/userland/lib/libc/stdlib/malloc.c
        os161/userland/lib/libc/stdlib/qsort.c
        os161/userland/lib/libc/stdlib/random.c
        os161/userland/lib/libc/stdlib/system.c
        os161/userland/lib/libc/string/memcmp.c
        os161/userland/lib/libc/string/strerror.c
        os161/userland/lib/libc/string/strtok.c
        os161/userland/lib/libc/time/time.c
        os161/userland/lib/libc/unix/__assert.c
        os161/userland/lib/libc/unix/err.c
        os161/userland/lib/libc/unix/errno.c
        os161/userland/lib/libc/unix/execvp.c
        os161/userland/lib/libc/unix/getcwd.c
        os161/userland/lib/libtest/quint.c
        os161/userland/lib/libtest/triple.c
        os161/userland/sbin/dumpsfs/dumpsfs.c
        os161/userland/sbin/halt/halt.c
        os161/userland/sbin/mksfs/disk.c
        os161/userland/sbin/mksfs/disk.h
        os161/userland/sbin/mksfs/mksfs.c
        os161/userland/sbin/mksfs/support.c
        os161/userland/sbin/mksfs/support.h
        os161/userland/sbin/poweroff/poweroff.c
        os161/userland/sbin/reboot/reboot.c
        os161/userland/sbin/sfsck/compat.h
        os161/userland/sbin/sfsck/freemap.c
        os161/userland/sbin/sfsck/freemap.h
        os161/userland/sbin/sfsck/ibmacros.h
        os161/userland/sbin/sfsck/inode.c
        os161/userland/sbin/sfsck/inode.h
        os161/userland/sbin/sfsck/main.c
        os161/userland/sbin/sfsck/main.h
        os161/userland/sbin/sfsck/pass1.c
        os161/userland/sbin/sfsck/pass2.c
        os161/userland/sbin/sfsck/passes.h
        os161/userland/sbin/sfsck/sb.c
        os161/userland/sbin/sfsck/sb.h
        os161/userland/sbin/sfsck/sfs.c
        os161/userland/sbin/sfsck/sfs.h
        os161/userland/sbin/sfsck/utils.c
        os161/userland/sbin/sfsck/utils.h
        os161/userland/testbin/add/add.c
        os161/userland/testbin/argtest/argtest.c
        os161/userland/testbin/badcall/bad_chdir.c
        os161/userland/testbin/badcall/bad_close.c
        os161/userland/testbin/badcall/bad_dup2.c
        os161/userland/testbin/badcall/bad_execv.c
        os161/userland/testbin/badcall/bad_fsync.c
        os161/userland/testbin/badcall/bad_ftruncate.c
        os161/userland/testbin/badcall/bad_getcwd.c
        os161/userland/testbin/badcall/bad_getdirentry.c
        os161/userland/testbin/badcall/bad_ioctl.c
        os161/userland/testbin/badcall/bad_link.c
        os161/userland/testbin/badcall/bad_lseek.c
        os161/userland/testbin/badcall/bad_mkdir.c
        os161/userland/testbin/badcall/bad_open.c
        os161/userland/testbin/badcall/bad_pipe.c
        os161/userland/testbin/badcall/bad_read.c
        os161/userland/testbin/badcall/bad_readlink.c
        os161/userland/testbin/badcall/bad_reboot.c
        os161/userland/testbin/badcall/bad_remove.c
        os161/userland/testbin/badcall/bad_rename.c
        os161/userland/testbin/badcall/bad_rmdir.c
        os161/userland/testbin/badcall/bad_sbrk.c
        os161/userland/testbin/badcall/bad_stat.c
        os161/userland/testbin/badcall/bad_symlink.c
        os161/userland/testbin/badcall/bad_time.c
        os161/userland/testbin/badcall/bad_waitpid.c
        os161/userland/testbin/badcall/bad_write.c
        os161/userland/testbin/badcall/common_buf.c
        os161/userland/testbin/badcall/common_fds.c
        os161/userland/testbin/badcall/common_path.c
        os161/userland/testbin/badcall/config.h
        os161/userland/testbin/badcall/driver.c
        os161/userland/testbin/badcall/report.c
        os161/userland/testbin/badcall/test.h
        os161/userland/testbin/bigexec/bigexec.c
        os161/userland/testbin/bigfile/bigfile.c
        os161/userland/testbin/bigfork/bigfork.c
        os161/userland/testbin/bigseek/bigseek.c
        os161/userland/testbin/bloat/bloat.c
        os161/userland/testbin/closetest/closetest.c
        os161/userland/testbin/conman/conman.c
        os161/userland/testbin/consoletest/consoletest.c
        os161/userland/testbin/crash/crash.c
        os161/userland/testbin/ctest/ctest.c
        os161/userland/testbin/dirconc/dirconc.c
        os161/userland/testbin/dirseek/dirseek.c
        os161/userland/testbin/dirtest/dirtest.c
        os161/userland/testbin/f_test/f_hdr.h
        os161/userland/testbin/f_test/f_read.c
        os161/userland/testbin/f_test/f_test.c
        os161/userland/testbin/f_test/f_write.c
        os161/userland/testbin/factorial/factorial.c
        os161/userland/testbin/farm/farm.c
        os161/userland/testbin/faulter/faulter.c
        os161/userland/testbin/fileonlytest/fileonlytest.c
        os161/userland/testbin/filetest/filetest.c
        os161/userland/testbin/forkbomb/forkbomb.c
        os161/userland/testbin/forktest/forktest.c
        os161/userland/testbin/frack/check.c
        os161/userland/testbin/frack/check.h
        os161/userland/testbin/frack/data.c
        os161/userland/testbin/frack/data.h
        os161/userland/testbin/frack/do.c
        os161/userland/testbin/frack/do.h
        os161/userland/testbin/frack/main.c
        os161/userland/testbin/frack/main.h
        os161/userland/testbin/frack/name.c
        os161/userland/testbin/frack/name.h
        os161/userland/testbin/frack/ops.c
        os161/userland/testbin/frack/ops.h
        os161/userland/testbin/frack/pool.c
        os161/userland/testbin/frack/pool.h
        os161/userland/testbin/frack/workloads.c
        os161/userland/testbin/frack/workloads.h
        os161/userland/testbin/guzzle/guzzle.c
        os161/userland/testbin/hash/hash.c
        os161/userland/testbin/hog/hog.c
        os161/userland/testbin/huge/huge.c
        os161/userland/testbin/kitchen/kitchen.c
        os161/userland/testbin/malloctest/malloctest.c
        os161/userland/testbin/matmult/matmult-orig.c
        os161/userland/testbin/matmult/matmult.c
        os161/userland/testbin/multiexec/multiexec.c
        os161/userland/testbin/opentest/opentest.c
        os161/userland/testbin/palin/palin.c
        os161/userland/testbin/parallelvm/parallelvm.c
        os161/userland/testbin/poisondisk/poisondisk.c
        os161/userland/testbin/psort/psort.c
        os161/userland/testbin/quinthuge/quinthuge.c
        os161/userland/testbin/quintmat/quintmat.c
        os161/userland/testbin/quintsort/quintsort.c
        os161/userland/testbin/randcall/extern.h
        os161/userland/testbin/randcall/main.c
        os161/userland/testbin/readwritetest/readwritetest.c
        os161/userland/testbin/redirect/redirect.c
        os161/userland/testbin/rmdirtest/rmdirtest.c
        os161/userland/testbin/rmtest/rmtest.c
        os161/userland/testbin/sbrktest/sbrktest.c
        os161/userland/testbin/schedpong/grind.c
        os161/userland/testbin/schedpong/main.c
        os161/userland/testbin/schedpong/pong.c
        os161/userland/testbin/schedpong/results.c
        os161/userland/testbin/schedpong/results.h
        os161/userland/testbin/schedpong/tasks.h
        os161/userland/testbin/schedpong/think.c
        os161/userland/testbin/schedpong/usem.c
        os161/userland/testbin/schedpong/usem.h
        os161/userland/testbin/shelltest/shelltest.c
        os161/userland/testbin/shll/shll.c
        os161/userland/testbin/sink/sink.c
        os161/userland/testbin/sort/sort.c
        os161/userland/testbin/sparsefile/sparsefile.c
        os161/userland/testbin/spinner/spinner.c
        os161/userland/testbin/stacktest/stacktest.c
        os161/userland/testbin/sty/sty.c
        os161/userland/testbin/tail/tail.c
        os161/userland/testbin/tictac/tictac.c
        os161/userland/testbin/triplehuge/triplehuge.c
        os161/userland/testbin/triplemat/triplemat.c
        os161/userland/testbin/triplesort/triplesort.c
        os161/userland/testbin/usemtest/usemtest.c
        os161/userland/testbin/userthreads/userthreads.c
        os161/userland/testbin/waiter/waiter.c
        os161/userland/testbin/zero/zero.c)

add_executable(601_os ${SOURCE_FILES})